[workspace]
resolver = "3"
members = [
    "adapter/inbound-http",
    "adapter/outbound-mjml",
    "adapter/outbound-sqlite",
    "binary",
    "domain",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
publish = false

[workspace.dependencies]
anyhow = { version = "1.0" }
axum = { version = "0.8" }
serde_json = { version = "1.0" }
sqlx = { version = "0.8", default-features = false, features = ["json", "macros", "migrate", "runtime-tokio", "sqlite"] }
tokio = { version = "1.0", features = ["macros", "rt"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1" }
uuid = { version = "1.23", default-features = false, features = ["std", "v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
