[workspace]
resolver = "3"
members = [
    "adapter/inbound-http",
    "adapter/inbound-nats",
    "adapter/inbound-worker",
    "adapter/outbound-interpolator",
    "adapter/outbound-mjml",
    "adapter/outbound-queue-memory",
    "adapter/outbound-attachment-fetcher",
    "adapter/outbound-attachment-fs",
    "adapter/outbound-attachment-s3",
    "adapter/outbound-attachment-redis",
    "adapter/outbound-resolver",
    "adapter/outbound-smtp",
    "adapter/outbound-nats",
    "adapter/outbound-webhook",
    "adapter/outbound-postgres",
    "adapter/outbound-sqlite",
    "binary",
    "domain",
    "telemetry",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
publish = false

[workspace.dependencies]
anyhow = { version = "1.0" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = { version = "2.5" }
minijinja = { version = "2.0", default-features = false, features = ["builtins", "serde"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
axum = { version = "0.8" }
serde_json = { version = "1.0" }
tempfile = { version = "3" }
sqlx = { version = "0.8", default-features = false, features = ["json", "macros", "migrate", "runtime-tokio", "sqlite", "postgres"] }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "signal", "time"] }
tokio-util = { version = "0.7" }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.32" }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "grpc-tonic", "http-proto", "reqwest-client", "metrics"] }
opentelemetry-semantic-conventions = { version = "0.32" }
tracing-opentelemetry = { version = "0.33" }
uuid = { version = "1.23", default-features = false, features = ["std", "v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
