[package]
name = "catapulte"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
catapulte-domain = { path = "../domain" }
catapulte-inbound-http = { path = "../adapter/inbound-http" }
catapulte-inbound-worker = { path = "../adapter/inbound-worker" }
catapulte-outbound-interpolator = { path = "../adapter/outbound-interpolator" }
catapulte-outbound-mjml = { path = "../adapter/outbound-mjml" }
catapulte-outbound-resolver = { path = "../adapter/outbound-resolver" }
catapulte-outbound-smtp = { path = "../adapter/outbound-smtp" }
catapulte-outbound-sqlite = { path = "../adapter/outbound-sqlite" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
