[package]
name = "catapulte"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
catapulte-domain = { path = "../domain" }
catapulte-inbound-http = { path = "../adapter/inbound-http" }
catapulte-inbound-worker = { path = "../adapter/inbound-worker" }
catapulte-outbound-interpolator = { path = "../adapter/outbound-interpolator" }
catapulte-outbound-mjml = { path = "../adapter/outbound-mjml" }
catapulte-outbound-resolver = { path = "../adapter/outbound-resolver" }
catapulte-outbound-smtp = { path = "../adapter/outbound-smtp" }
catapulte-outbound-nats = { path = "../adapter/outbound-nats" }
catapulte-outbound-webhook = { path = "../adapter/outbound-webhook" }
catapulte-outbound-queue-memory = { path = "../adapter/outbound-queue-memory" }
catapulte-outbound-postgres = { path = "../adapter/outbound-postgres" }
catapulte-outbound-sqlite = { path = "../adapter/outbound-sqlite" }
catapulte-outbound-attachment-fetcher = { path = "../adapter/outbound-attachment-fetcher" }
catapulte-outbound-attachment-fs = { path = "../adapter/outbound-attachment-fs" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
base64 = { version = "0.22" }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
testcontainers = { version = "0.23" }
tokio = { workspace = true }
wiremock = { version = "0.6" }
