[package]
name = "catapulte"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
opentelemetry = { workspace = true }
catapulte-domain = { path = "../domain" }
catapulte-telemetry = { path = "../telemetry" }
catapulte-inbound-http = { path = "../adapter/inbound-http" }
catapulte-inbound-nats = { path = "../adapter/inbound-nats" }
catapulte-inbound-worker = { path = "../adapter/inbound-worker" }
catapulte-outbound-interpolator = { path = "../adapter/outbound-interpolator" }
catapulte-outbound-mjml = { path = "../adapter/outbound-mjml" }
catapulte-outbound-resolver = { path = "../adapter/outbound-resolver" }
catapulte-outbound-smtp = { path = "../adapter/outbound-smtp" }
catapulte-outbound-nats = { path = "../adapter/outbound-nats" }
catapulte-outbound-webhook = { path = "../adapter/outbound-webhook" }
catapulte-outbound-queue-memory = { path = "../adapter/outbound-queue-memory" }
catapulte-outbound-postgres = { path = "../adapter/outbound-postgres" }
catapulte-outbound-sqlite = { path = "../adapter/outbound-sqlite" }
catapulte-outbound-attachment-fetcher = { path = "../adapter/outbound-attachment-fetcher" }
catapulte-outbound-attachment-fs = { path = "../adapter/outbound-attachment-fs" }
catapulte-outbound-attachment-s3 = { path = "../adapter/outbound-attachment-s3" }
catapulte-outbound-attachment-redis = { path = "../adapter/outbound-attachment-redis" }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
async-nats = "0.48"
base64 = { version = "0.22" }
futures-util = "0.3"
paste = "1"
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
serial_test = "3"
tempfile = { workspace = true }
testcontainers = { version = "0.27" }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
wiremock = { version = "0.6" }
