[package]
name = "catapulte-domain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
thiserror = { version = "2.0" }
tracing = { workspace = true }
url = { version = "2.5" }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
