[package]
name = "catapulte-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = "1"
serde_json = { workspace = true }
thiserror = { version = "2.0" }
tokio = { workspace = true, features = ["io-util"] }
tracing = { workspace = true }
url = { version = "2.5" }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["io-util"] }
