[package]
name = "catapulte-inbound-http"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
base64 = "0.22"
bytes = "1"
catapulte-domain = { path = "../../domain" }
email_address = "0.2"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
thiserror = { version = "2.0" }
tokio = { workspace = true, features = ["net"] }
tokio-util = { workspace = true, features = ["io"] }
tower-http = { workspace = true, features = ["timeout"] }
tracing = { workspace = true }
url = { version = "2.5" }
uuid = { workspace = true }

[dev-dependencies]
http-body-util = { version = "0.1" }
tokio = { workspace = true }
tower = { version = "0.5" }
uuid = { workspace = true }
