[package]
name = "catapulte-inbound-nats"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-nats = "0.48"
catapulte-domain = { path = "../../domain" }
catapulte-inbound-http = { path = "../inbound-http" }
catapulte-telemetry = { path = "../../telemetry" }
futures-util = { version = "0.3" }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
