[package]
name = "catapulte-inbound-worker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
catapulte-domain = { path = "../../domain" }
tokio = { workspace = true }
tracing = { workspace = true }
