[package]
name = "catapulte-outbound-attachment-redis"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
catapulte-domain = { path = "../../domain" }
redis = { version = "1.2.2", default-features = false, features = ["tokio-comp", "tokio-rustls-comp", "connection-manager"] }
tokio = { workspace = true, features = ["io-util"] }
uuid = { workspace = true }

[dev-dependencies]
serial_test = "3"
testcontainers = { version = "0.23" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
