[package]
name = "catapulte-outbound-attachment-s3"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
catapulte-domain = { path = "../../domain" }
thiserror = { version = "2.0" }
tokio = { workspace = true, features = ["io-util"] }
tokio-util = { workspace = true, features = ["io"] }
futures-util = { version = "0.3" }
tracing = { workspace = true }
uuid = { workspace = true }
rust-s3 = { version = "0.37.2", default-features = false, features = ["tokio-rustls-tls"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
