[package]
name = "catapulte-outbound-attachment-s3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["rust-s3"]

[dependencies]
anyhow = { workspace = true }
catapulte-domain = { path = "../../domain" }
tokio-util = { workspace = true, features = ["io"] }
futures-util = { version = "0.3" }
tracing = { workspace = true }
uuid = { workspace = true }
rust-s3 = { version = "0.37.2", default-features = false, features = ["tokio-rustls-tls"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
