[package]
name = "catapulte-outbound-interpolator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
catapulte-domain = { path = "../../domain" }
minijinja = { workspace = true }
serde_json = { workspace = true }
