[package]
name = "catapulte-outbound-mjml"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
catapulte-domain = { path = "../../domain" }
mrml = { version = "6.0.1", default-features = false, features = ["parse", "render", "local-loader", "http-loader-ureq"] }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
