[package]
name = "catapulte-outbound-mjml"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.89"
catapulte-domain = { path = "../../domain" }
mrml = { version = "6.0.1", default-features = false, features = ["parse", "render", "local-loader", "http-loader-async-reqwest"] }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
