[package]
name = "catapulte-outbound-nats"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-nats = "0.48"
bytes = "1"
catapulte-domain = { path = "../../domain" }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
testcontainers = { version = "0.23" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
