[package]
name = "catapulte-outbound-postgres"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
catapulte-domain = { path = "../../domain" }
catapulte-telemetry = { path = "../../telemetry" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "uuid", "migrate", "macros"] }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
testcontainers = { version = "0.27" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
