[package]
name = "catapulte-outbound-queue-memory"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
catapulte-domain = { path = "../../domain" }
catapulte-telemetry = { path = "../../telemetry" }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
