[package]
name = "catapulte-outbound-resolver"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
catapulte-domain = { path = "../../domain" }
reqwest = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { version = "3" }
tokio = { workspace = true }
