[package]
name = "catapulte-outbound-smtp"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = "1"
catapulte-domain = { path = "../../domain" }
lettre = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
