[package]
name = "catapulte-outbound-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
catapulte-domain = { path = "../../domain" }
catapulte-telemetry = { path = "../../telemetry" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
