[package]
name = "catapulte-adapter-http"
description = "HTTP adapter for catapulte - Axum-based web server"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
license = "AGPL-3.0"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8", features = ["multipart"] }
bytes = { version = "1.6" }
catapulte-domain = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { version = "0.17", default-features = false, features = ["http-listener"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "signal"] }
tower-http = { version = "0.6", default-features = false, features = ["trace"] }
tracing = { workspace = true }
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
