[package]
name = "catapulte-engine"
description = "The core engine of catapulte with template loading, interpolation and rendering."
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
license = "AGPL-3.0"
version = "0.1.0"
edition = "2021"

[dependencies]
catapulte-prelude = { path = "../prelude", version = "0.1.0" }

bytes = { version = "1.6.0" }
handlebars = { version = "5.1.2" }
lettre = { default-features = false, features = [
  "builder",
], version = "0.11.4" }
metrics = { version = "0.22.3" }
mrml = { version = "3.1.3", features = ["async", "local-loader"] }
reqwest = { version = "0.12.2", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115" }
thiserror = { version = "1.0.58" }
tracing = { version = "0.1.40" }
url = { version = "2.5.0" }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros"] }
wiremock = { version = "0.6.0" }
