[package]
name = "catapulte-engine"
description = "The core engine of catapulte with template loading, interpolation and rendering."
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
license = "AGPL-3.0"
version = "0.1.0"
edition = "2021"

[dependencies]
catapulte-prelude = { workspace = true }

bytes = { version = "1.6" }
handlebars = { version = "6.3" }
lettre = { default-features = false, features = ["builder"], workspace = true }
metrics = { workspace = true }
mrml = { version = "5.0", features = ["async", "local-loader"] }
reqwest = { workspace = true, default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
wiremock = { version = "0.6" }
