[package]
name = "catapulte-prelude"
description = "The package containing the file formats for exchanging templates and metadata files."
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
license = "AGPL-3.0"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["serde_json/std"]
alloc = ["serde_json/alloc"]

[dependencies]
serde = { workspace = true, default-features = false }
serde_json = { workspace = true, default-features = false }
url = { workspace = true, default-features = false, features = ["serde"] }
